--- a/web/css/layout-dbjr.scss
+++ b/web/css/layout-dbjr.scss
@@ -7,10 +7,10 @@ $firaSansFontPath: "../fonts/firasans/";
 $veraSansPath: "../fonts/BitstreamVeraSansMono";
 @import "../fonts/BitstreamVeraSansMono/verasans";
 
-$screen-md-min: $container-md !default;
+$screen-md-min: ($container-md + 90px) !default; // Extra spacing for the "create motion button"
 $mainContentWidth: $container-md - $sidebarWidth !default;
 $content-max-width: $mainContentWidth - 2px !default;
-$grid-float-breakpoint: $container-md - 32px !default; // $screen-md-min;
+$grid-float-breakpoint: $screen-md-min !default;
 
 $colorDarkGrey: rgb(64, 64, 64);
 $colorMediumGrey: rgb(120, 120, 120);
